changed repo name

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -2,7 +2,7 @@ node {
    def mvnHome
    stage('test') { // for display purposes
       // Get some code from a GitHub repository
-      git 'https://github.com/CodeN1nja/test.git'
+      git 'https://github.com/CodeN1nja/jenkins.git'
       def out = sh script: 'ls', returnStdout: true
    }
 }
